# drf-auth

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
blog/: models.py  serializers.py  urls.py  views.py
blog/migrations/: 0001_initial.py
drf_auth/: settings.py  urls.py
